--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chrome Push Notification Demo</title>
+  <title>Push Notification Debug Demo</title>
   <link rel="icon" href="icon.png" type="image/png" />
 </head>
 <body>
-  <h1>Chrome Push Notification Demo</h1>
+  <h1>Push Notification Debug Demo</h1>
   <button id="notifyBtn">Enable Notifications</button>
 
   <script src="app.js"></script>
 </body>
 </html>
-
