--- a/index.html
+++ b/index.html
@@ -2,83 +2,81 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Notification Demo</title>
-  
-  <!-- Google Font: Outfit -->
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
+  <title>Notification Permission Check</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Outfit Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: 'Outfit', sans-serif;
-      background: #f9f9f9;
+      background-color: #f9fafb;
     }
     .card {
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      border-radius: 1rem;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
     .btn-custom {
-      border-radius: 12px;
+      border-radius: 50px;
+      padding: 10px 20px;
     }
   </style>
 </head>
 <body class="d-flex align-items-center justify-content-center vh-100">
 
-  <div class="card p-4 text-center" style="max-width: 450px;">
-    <h2 class="mb-3">🔔 Notifications</h2>
-    <p class="text-muted">Click the button below to check & enable notifications in Chrome.</p>
-    <button id="notifyBtn" class="btn btn-primary btn-lg btn-custom">Enable Notifications</button>
-    <p id="status" class="mt-3 text-secondary"></p>
+  <div class="card p-4 text-center" style="max-width: 500px; width:100%;">
+    <h3 class="mb-3">🔔 Notification Permission</h3>
+    <p id="statusText" class="mb-3">Checking notification status...</p>
+    <button id="requestBtn" class="btn btn-primary btn-custom">Request Permission</button>
+    <div id="instructions" class="mt-3 text-muted small" style="display:none;">
+      <p><b>How to enable Chrome notifications globally:</b></p>
+      <ol class="text-start">
+        <li>Open <b>Chrome Settings</b>.</li>
+        <li>Go to <b>Privacy and security → Site Settings → Notifications</b>.</li>
+        <li>Turn on <b>Sites can ask to send notifications</b>.</li>
+        <li>If blocked, remove your site from the “Not allowed” list.</li>
+      </ol>
+    </div>
   </div>
 
   <script>
-    const statusEl = document.getElementById("status");
-    const notifyBtn = document.getElementById("notifyBtn");
+    const statusText = document.getElementById("statusText");
+    const requestBtn = document.getElementById("requestBtn");
+    const instructions = document.getElementById("instructions");
 
-    // Check current notification permission
-    function checkPermission() {
+    function updateStatus() {
+      if (!("Notification" in window)) {
+        statusText.textContent = "❌ This browser does not support notifications.";
+        requestBtn.style.display = "none";
+        return;
+      }
+
       if (Notification.permission === "granted") {
-        statusEl.textContent = "✅ Notifications are already allowed in Chrome.";
-        sendTestNotification();
+        statusText.textContent = "✅ Notifications are allowed.";
+        requestBtn.style.display = "none";
+        new Notification("Hello!", { body: "Notifications are enabled 🎉", icon: "https://cdn-icons-png.flaticon.com/512/1827/1827349.png" });
       } else if (Notification.permission === "denied") {
-        statusEl.textContent = "❌ Notifications are blocked in Chrome settings.";
+        statusText.textContent = "❌ Notifications are blocked in Chrome settings.";
+        requestBtn.style.display = "none";
+        instructions.style.display = "block";
       } else {
-        statusEl.textContent = "⚠️ Notifications are not yet granted.";
+        statusText.textContent = "⚠️ Notifications are not allowed yet.";
+        requestBtn.style.display = "inline-block";
       }
     }
 
-    // Send a sample notification
-    function sendTestNotification() {
-      new Notification("Hello!", {
-        body: "This is a test notification 🎉",
-        icon: "https://vimalraj45.github.io/pushnotification/icon.png"
+    requestBtn.addEventListener("click", () => {
+      Notification.requestPermission().then(permission => {
+        updateStatus();
       });
-    }
-
-    // Ask for permission
-    notifyBtn.addEventListener("click", () => {
-      if (Notification.permission === "granted") {
-        sendTestNotification();
-      } else {
-        Notification.requestPermission().then(permission => {
-          if (permission === "granted") {
-            statusEl.textContent = "✅ Notifications enabled successfully!";
-            sendTestNotification();
-          } else {
-            statusEl.textContent = "⚠️ You denied notification permission.";
-          }
-        });
-      }
     });
 
-    // Run check on page load
-    checkPermission();
+    updateStatus();
   </script>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
