--- a/index.html
+++ b/index.html
@@ -2,81 +2,83 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Notification Permission Check</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Notification Demo</title>
+  
+  <!-- Google Font: Outfit -->
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Outfit Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&display=swap" rel="stylesheet">
-
   <style>
     body {
       font-family: 'Outfit', sans-serif;
-      background-color: #f9fafb;
+      background: #f9f9f9;
     }
     .card {
-      border-radius: 1rem;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
     }
     .btn-custom {
-      border-radius: 50px;
-      padding: 10px 20px;
+      border-radius: 12px;
     }
   </style>
 </head>
 <body class="d-flex align-items-center justify-content-center vh-100">
 
-  <div class="card p-4 text-center" style="max-width: 500px; width:100%;">
-    <h3 class="mb-3">🔔 Notification Permission</h3>
-    <p id="statusText" class="mb-3">Checking notification status...</p>
-    <button id="requestBtn" class="btn btn-primary btn-custom">Request Permission</button>
-    <div id="instructions" class="mt-3 text-muted small" style="display:none;">
-      <p><b>How to enable Chrome notifications globally:</b></p>
-      <ol class="text-start">
-        <li>Open <b>Chrome Settings</b>.</li>
-        <li>Go to <b>Privacy and security → Site Settings → Notifications</b>.</li>
-        <li>Turn on <b>Sites can ask to send notifications</b>.</li>
-        <li>If blocked, remove your site from the “Not allowed” list.</li>
-      </ol>
-    </div>
+  <div class="card p-4 text-center" style="max-width: 450px;">
+    <h2 class="mb-3">🔔 Notifications</h2>
+    <p class="text-muted">Click the button below to check & enable notifications in Chrome.</p>
+    <button id="notifyBtn" class="btn btn-primary btn-lg btn-custom">Enable Notifications</button>
+    <p id="status" class="mt-3 text-secondary"></p>
   </div>
 
   <script>
-    const statusText = document.getElementById("statusText");
-    const requestBtn = document.getElementById("requestBtn");
-    const instructions = document.getElementById("instructions");
+    const statusEl = document.getElementById("status");
+    const notifyBtn = document.getElementById("notifyBtn");
 
-    function updateStatus() {
-      if (!("Notification" in window)) {
-        statusText.textContent = "❌ This browser does not support notifications.";
-        requestBtn.style.display = "none";
-        return;
-      }
-
+    // Check current notification permission
+    function checkPermission() {
       if (Notification.permission === "granted") {
-        statusText.textContent = "✅ Notifications are allowed.";
-        requestBtn.style.display = "none";
-        new Notification("Hello!", { body: "Notifications are enabled 🎉", icon: "https://cdn-icons-png.flaticon.com/512/1827/1827349.png" });
+        statusEl.textContent = "✅ Notifications are already allowed in Chrome.";
+        sendTestNotification();
       } else if (Notification.permission === "denied") {
-        statusText.textContent = "❌ Notifications are blocked in Chrome settings.";
-        requestBtn.style.display = "none";
-        instructions.style.display = "block";
+        statusEl.textContent = "❌ Notifications are blocked in Chrome settings.";
       } else {
-        statusText.textContent = "⚠️ Notifications are not allowed yet.";
-        requestBtn.style.display = "inline-block";
+        statusEl.textContent = "⚠️ Notifications are not yet granted.";
       }
     }
 
-    requestBtn.addEventListener("click", () => {
-      Notification.requestPermission().then(permission => {
-        updateStatus();
+    // Send a sample notification
+    function sendTestNotification() {
+      new Notification("Hello!", {
+        body: "This is a test notification 🎉",
+        icon: "https://vimalraj45.github.io/pushnotification/icon.png"
       });
+    }
+
+    // Ask for permission
+    notifyBtn.addEventListener("click", () => {
+      if (Notification.permission === "granted") {
+        sendTestNotification();
+      } else {
+        Notification.requestPermission().then(permission => {
+          if (permission === "granted") {
+            statusEl.textContent = "✅ Notifications enabled successfully!";
+            sendTestNotification();
+          } else {
+            statusEl.textContent = "⚠️ You denied notification permission.";
+          }
+        });
+      }
     });
 
-    updateStatus();
+    // Run check on page load
+    checkPermission();
   </script>
 
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
