--- a/index.html
+++ b/index.html
@@ -1,84 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Notification Demo</title>
-  
-  <!-- Google Font: Outfit -->
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
-
-  <!-- Bootstrap 5 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <style>
-    body {
-      font-family: 'Outfit', sans-serif;
-      background: #f9f9f9;
-    }
-    .card {
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    }
-    .btn-custom {
-      border-radius: 12px;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Push Notification Demo45</title>
+  <link rel="icon" href="icon.png" type="image/png" />
 </head>
-<body class="d-flex align-items-center justify-content-center vh-100">
+<body>
+  <h1>Push Notification Demo</h1>
+  <button id="notifyBtn">Enable Notifications</button>
 
-  <div class="card p-4 text-center" style="max-width: 450px;">
-    <h2 class="mb-3">🔔 Notifications</h2>
-    <p class="text-muted">Click the button below to check & enable notifications in Chrome.</p>
-    <button id="notifyBtn" class="btn btn-primary btn-lg btn-custom">Enable Notifications</button>
-    <p id="status" class="mt-3 text-secondary"></p>
-  </div>
-
-  <script>
-    const statusEl = document.getElementById("status");
-    const notifyBtn = document.getElementById("notifyBtn");
-
-    // Check current notification permission
-    function checkPermission() {
-      if (Notification.permission === "granted") {
-        statusEl.textContent = "✅ Notifications are already allowed in Chrome.";
-        sendTestNotification();
-      } else if (Notification.permission === "denied") {
-        statusEl.textContent = "❌ Notifications are blocked in Chrome settings.";
-      } else {
-        statusEl.textContent = "⚠️ Notifications are not yet granted.";
-      }
-    }
-
-    // Send a sample notification
-    function sendTestNotification() {
-      new Notification("Hello!", {
-        body: "This is a test notification 🎉",
-        icon: "https://vimalraj45.github.io/pushnotification/icon.png"
-      });
-    }
-
-    // Ask for permission
-    notifyBtn.addEventListener("click", () => {
-      if (Notification.permission === "granted") {
-        sendTestNotification();
-      } else {
-        Notification.requestPermission().then(permission => {
-          if (permission === "granted") {
-            statusEl.textContent = "✅ Notifications enabled successfully!";
-            sendTestNotification();
-          } else {
-            statusEl.textContent = "⚠️ You denied notification permission.";
-          }
-        });
-      }
-    });
-
-    // Run check on page load
-    checkPermission();
-  </script>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
